--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ env:
   - distribution: centos
     version: 7
   - distribution: ubuntu
+    version: artful
+  - distribution: ubuntu
     version: xenial
   - distribution: ubuntu
     version: trusty
