--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ env:
     version: 7
   - distribution: centos
     version: 6
-  - distribution: ubuntu
-    version: artful
+#  - distribution: ubuntu
+#    version: artful
   - distribution: ubuntu
     version: xenial
   - distribution: ubuntu
@@ -27,6 +27,7 @@ before_install:
 script:
   - container_id=$(mktemp)
   - 'sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/ansible-common:ro ${distribution}-${version}:ansible > "${container_id}"'
+  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible all -m setup'
   - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook /etc/ansible/roles/ansible-common/travis/test.yml --syntax-check'
   - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook /etc/ansible/roles/ansible-common/travis/test.yml'
   - >
