--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,5 @@ script:
     | grep -q 'changed=0.*failed=0'
     && (echo 'Idempotence test: pass' && exit 0)
     || (echo 'Idempotence test: fail' && exit 1)
+  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible all -m setup'
   - 'sudo docker rm -f "$(cat ${container_id})"'
