--- a/travis/test.yml
+++ b/travis/test.yml
@@ -20,7 +20,7 @@
         name: "{{ item }}"
         state: present
       with_items:
-        - build-essential
+#        - build-essential
         - unzip
         - tar
         - sudo
