--- a/travis/Dockerfile.ubuntu-artful
+++ b/travis/Dockerfile.ubuntu-artful
@@ -1,12 +1,39 @@
 FROM ubuntu:artful
+# Thanks to Jeff Geerling for his input on Docker with Ubuntu 18.04.
+# It works on Ubuntu 17.10 too, see:
+# https://github.com/geerlingguy/docker-ubuntu1804-ansible
 
-RUN apt-get update && apt-get dist-upgrade -y && apt-get install -y software-properties-common && rm -rf /var/lib/apt/lists/*
 
-RUN apt-add-repository -y ppa:ansible/ansible && apt-get update && apt-get install -y \
-    git \
-    ansible \
- && rm -rf /var/lib/apt/lists/*
+# Install dependencies.
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+       python-software-properties \
+       python-setuptools \
+       python-pip \
+       software-properties-common \
+       rsyslog systemd systemd-cron sudo \
+    && rm -Rf /var/lib/apt/lists/* \
+    && rm -Rf /usr/share/doc && rm -Rf /usr/share/man \
+    && apt-get clean
+RUN sed -i 's/^\($ModLoad imklog\)/#\1/' /etc/rsyslog.conf
+#ADD etc/rsyslog.d/50-default.conf /etc/rsyslog.d/50-default.conf
 
+# Install Ansible via Pip.
+RUN add-apt-repository -y ppa:ansible/ansible \
+   && apt-get update \
+   && apt-get install -y --no-install-recommends \
+      ansible \
+   && rm -rf /var/lib/apt/lists/* \
+   && rm -Rf /usr/share/doc && rm -Rf /usr/share/man \
+   && apt-get clean
+
+COPY initctl_faker .
+RUN chmod +x initctl_faker && rm -fr /sbin/initctl && ln -s /initctl_faker /sbin/initctl
+
+# Install Ansible inventory file.
+RUN mkdir -p /etc/ansible
 RUN echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
 
-ENTRYPOINT ["/sbin/init"]
+RUN apt-get update
+
+CMD ["/lib/systemd/systemd"]
