--- a/.travis.yml
+++ b/.travis.yml
@@ -37,3 +37,6 @@ script:
     || (echo 'Idempotence test: fail' && exit 1)
   - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible all -m setup'
   - 'sudo docker rm -f "$(cat ${container_id})"'
+
+notifications:
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
