Ubuntu 14.04 LTS (Trusty Tahr) now supported

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,6 +15,7 @@ galaxy_info:
     - name: Ubuntu
       versions:
       - artful
+      - trusty
       - xenial
     - name: Debian
       versions:
