--- a/travis/Dockerfile.centos-6
+++ b/travis/Dockerfile.centos-6
@@ -1,17 +1,19 @@
 FROM centos:6
+
 # Thanks to Jeff Geerling for his input on Docker with CentOS 6,
 # see: https://github.com/geerlingguy/docker-centos6-ansible/blob/master/Dockerfile
 
 # Install Ansible and other requirements.
 RUN yum makecache fast \
- && yum -y install epel-release \
- && yum -y update \
- && yum -y install \
-      ansible \
-      sudo \
-      which \
-      initscripts \
- && yum clean all
+  && yum -y install epel-release \
+  && yum -y update \
+  && yum -y install \
+       git \
+       ansible \
+       sudo \
+       which \
+       initscripts \
+  && yum clean all
 
 # Disable requiretty.
 RUN sed -i -e 's/^\(Defaults\s*requiretty\)/#--- \1/'  /etc/sudoers
@@ -19,4 +21,5 @@ RUN sed -i -e 's/^\(Defaults\s*requiretty\)/#--- \1/'  /etc/sudoers
 # Install Ansible inventory file.
 RUN echo -e '[local]\nlocalhost ansible_connection=local' > /etc/ansible/hosts
 
-CMD ["/sbin/init"]
+VOLUME [ "/sys/fs/cgroup" ]
+ENTRYPOINT ["/sbin/init"]
