--- a/travis/Dockerfile.ubuntu-xenial
+++ b/travis/Dockerfile.ubuntu-xenial
@@ -1,12 +1,28 @@
 FROM ubuntu:xenial
 
-RUN apt-get update && apt-get dist-upgrade -y && apt-get install -y software-properties-common && rm -rf /var/lib/apt/lists/*
+# Avoid debconf error: unable to initialize frontend
+ARG DEBIAN_FRONTEND=noninteractive
 
-RUN apt-add-repository -y ppa:ansible/ansible && apt-get update && apt-get install -y \
-    git \
-    ansible \
- && rm -rf /var/lib/apt/lists/*
+# Install dependencies.
+RUN apt-get update \
+  && apt-get upgrade -y \
+  && apt-get dist-upgrade -y \
+  && apt-get install -y software-properties-common \
+       apt-utils \
+       sudo \
+  && apt-get clean
 
-RUN echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
+# Install Ansible.
+RUN apt-add-repository -y ppa:ansible/ansible \
+  && apt-get update \
+  && apt-get install -y \
+       git \
+       ansible \
+  && apt-get clean
 
+# Prepare Ansible.
+RUN mkdir -p /etc/ansible \
+  && echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
+
+VOLUME [ "/sys/fs/cgroup" ]
 ENTRYPOINT ["/sbin/init"]
