--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -6,6 +6,7 @@
     name: "{{ item }}"
     state: present
   with_items: "{{ essential_packages }}"
+  when: not ansible_check_mode
   tags:
     - install
 
@@ -14,6 +15,7 @@
     name: "{{ item }}"
     state: present
   with_items: "{{ common_packages }}"
+  when: not ansible_check_mode
   tags:
     - install
 
