--- a/travis/Dockerfile.debian-jessie
+++ b/travis/Dockerfile.debian-jessie
@@ -1,17 +1,31 @@
 FROM debian:jessie
 
-RUN apt-get update -y && apt-get install -y --no-install-recommends \
-    software-properties-common \
-    build-essential \
-    libffi-dev \
-    libssl-dev \
-    python-dev \
-    python-pip \
-    git \
- && rm -rf /var/lib/apt/lists/*
+# Avoid debconf error: unable to initialize frontend
+ARG DEBIAN_FRONTEND=noninteractive
 
-RUN pip install --upgrade setuptools && pip install ansible
+# Install dependencies.
+RUN apt-get update \
+  && apt-get upgrade -y \
+  && apt-get dist-upgrade -y \
+  && apt-get install -y software-properties-common \
+       apt-utils \
+       sudo \
+  && apt-get clean
 
-RUN mkdir -p /etc/ansible && echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
+# Install Ansible.
+RUN echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" \
+     >> /etc/apt/sources.list \
+  && apt-key adv --keyserver keyserver.ubuntu.com \
+     --recv-keys 93C4A3FD7BB9C367 \
+  && apt-get update \
+  && apt-get install -y \
+       git \
+       ansible \
+  && apt-get clean
 
+# Install Ansible inventory file.
+RUN mkdir -p /etc/ansible \
+  && echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
+
+VOLUME [ "/sys/fs/cgroup" ]
 ENTRYPOINT ["/sbin/init"]
