--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,12 @@ before_install:
   - 'sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible travis'
   - 'echo List docker images'
   - 'sudo docker image ls'
+  - 'sudo ls -la /sys/fs'
 
 script:
   - container_id=$(mktemp)
   - 'echo Create docker container from image ${distribution}-${version}:ansible.'
-  - 'sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro -v /sys/fs/selinux:/sys/fs/selinux:ro --volume="${PWD}":/etc/ansible/roles/ansible-common:ro ${distribution}-${version}:ansible > "${container_id}"'
+  - 'sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/ansible-common:ro ${distribution}-${version}:ansible > "${container_id}"'
   - 'echo Get system facts for container ${distribution}-${version}:ansible.'
   - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible all -m setup'
   - 'echo Testing the role’s syntax.'
