--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,7 @@ script:
   - container_id=$(mktemp)
   - >
     echo Create docker container from image ${distribution}-${version}:ansible.
-    && sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro 
-         --volume="${PWD}":/etc/ansible/roles/ansible-common:ro 
-         ${distribution}-${version}:ansible > "${container_id}"
+    && sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/ansible-common:ro ${distribution}-${version}:ansible > "${container_id}"
   - >
     echo Get system facts for container ${distribution}-${version}:ansible.
     && sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible all -m setup
