--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,12 @@ services:
   - docker
 
 before_install:
-  - 'echo Get docker image ${distribution}:${version}.'
-  - 'sudo docker pull ${distribution}:${version}'
-  - 'echo Build docker image ${distribution}:${version} for use with Ansible.'
-  - 'sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible travis'
+  - >
+    echo Get docker image ${distribution}:${version}.
+    && sudo docker pull ${distribution}:${version}
+  - >
+    echo Build docker image ${distribution}:${version} for use with Ansible.
+    && sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible travis
 
 script:
   - container_id=$(mktemp)
@@ -43,9 +45,9 @@ script:
   - >
     echo Run the playbook.
     && sudo docker exec "$(cat ${container_id})" env DEBIAN_FRONTEND=noninteractive ANSIBLE_FORCE_COLOR=1 ansible-playbook /etc/ansible/roles/ansible-common/travis/test.yml
+  - 'echo Run the role/playbook again, checking to make sure it is idempotent.'
   - >
-    echo Run the role/playbook again, checking to make sure it is idempotent.
-    && sudo docker exec "$(cat ${container_id})" env DEBIAN_FRONTEND=noninteractive ANSIBLE_FORCE_COLOR=1 ansible-playbook /etc/ansible/roles/ansible-common/travis/test.yml
+    sudo docker exec "$(cat ${container_id})" env DEBIAN_FRONTEND=noninteractive ANSIBLE_FORCE_COLOR=1 ansible-playbook /etc/ansible/roles/ansible-common/travis/test.yml
     | grep -q 'changed=0.*failed=0'
     && (echo 'Idempotence test: pass' && exit 0)
     || (echo 'Idempotence test: fail' && exit 1)
