--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,7 +5,7 @@ galaxy_info:
   author: Cogline.v3
   description: Setup defaults (Ansible module dependencies, software packages, bash dotfiles, etc.) for every supported Linux distribution.
   license: BSD
-  min_ansible_version: 2.4
+  min_ansible_version: 2.7
   #github_branch:
   platforms:
     - name: EL
@@ -17,6 +17,8 @@ galaxy_info:
       - artful
       - trusty
       - xenial
+      - cosmic
+      - bionic
     - name: Debian
       versions:
       - jessie
