added support for Ubuntu 18.04 and 18.10

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ env:
     version: xenial
   - distribution: ubuntu
     version: trusty
+  - distribution: ubuntu
+    version: bionic
+  - distribution: ubuntu
+    version: cosmic
   - distribution: debian
     version: stretch
   - distribution: debian
