--- a/travis/Dockerfile.ubuntu-bionic
+++ b/travis/Dockerfile.ubuntu-bionic
@@ -3,26 +3,18 @@ FROM ubuntu:bionic
 # Avoid debconf error: unable to initialize frontend
 ARG DEBIAN_FRONTEND=noninteractive
 
-# Install dependencies.
 RUN apt-get update \
-  && apt-get upgrade -y \
-  && apt-get dist-upgrade -y \
-  && apt-get install -y software-properties-common \
-       apt-utils \
-       sudo \
-  && apt-get clean
+    && apt-get dist-upgrade -y \
+    && apt-get install -y software-properties-common systemd \
+    && rm -rf /var/lib/apt/lists/*
 
 # Install Ansible.
 RUN apt-add-repository -y ppa:ansible/ansible \
-  && apt-get update \
-  && apt-get install -y \
-       git \
-       ansible \
-  && apt-get clean
+    && apt-get update && apt-get install -y \
+      git \
+      ansible \
+    && rm -rf /var/lib/apt/lists/*
 
-# Prepare Ansible.
-RUN mkdir -p /etc/ansible \
-  && echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
+RUN echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
 
-VOLUME [ "/sys/fs/cgroup" ]
-ENTRYPOINT ["/sbin/init"]
+ENTRYPOINT ["/bin/systemd"]
