--- a/travis/Dockerfile.ubuntu-artful
+++ b/travis/Dockerfile.ubuntu-artful
@@ -1,39 +1,20 @@
 FROM ubuntu:artful
 
-# Thanks to Jeff Geerling for his input on Docker with Ubuntu 18.04.
-# It works on Ubuntu 17.10 too, see:
-# https://github.com/geerlingguy/docker-ubuntu1804-ansible
-
 # Avoid debconf error: unable to initialize frontend
 ARG DEBIAN_FRONTEND=noninteractive
 
-# Install dependencies.
 RUN apt-get update \
-  && apt-get upgrade -y \
-  && apt-get dist-upgrade -y \
-  && apt-get install -y software-properties-common \
-       apt-utils \
-       sudo \
-       rsyslog \
-       systemd \
-       systemd-cron \
-  && apt-get clean
+    && apt-get dist-upgrade -y \
+    && apt-get install -y software-properties-common systemd \
+    && rm -rf /var/lib/apt/lists/*
 
 # Install Ansible.
 RUN apt-add-repository -y ppa:ansible/ansible \
-  && apt-get update \
-  && apt-get install -y \
-       git \
-       ansible \
-  && apt-get clean
+    && apt-get update && apt-get install -y \
+      git \
+      ansible \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install Ansible inventory file.
-RUN mkdir -p /etc/ansible \
-  && echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
+RUN echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
 
-
-COPY initctl_faker .
-RUN chmod +x initctl_faker && rm -fr /sbin/initctl && ln -s /initctl_faker /sbin/initctl
-
-VOLUME [ "/sys/fs/cgroup" ]
-ENTRYPOINT ["/lib/systemd/systemd"]
+ENTRYPOINT ["/bin/systemd"]
