--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ env:
     version: bionic
   - distribution: ubuntu
     version: cosmic
+  - distribution: ubuntu
+    version: disco
   - distribution: debian
     version: stretch
   - distribution: debian
