package state can now be defined

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,3 +20,7 @@
 #  - psmisc
 #  - vim
 #  - curl
+
+# default package states: present | latest | absent
+essential_packages_state: present
+common_packages_state: present
