--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -1,16 +1,26 @@
 ---
 # file: roles/ansible-common/tasks/setup-RedHat.yml
 
+- name: "RedHat: Install EPEL Repository"
+  yum:
+    name: epel-release
+    state: present
+  when: not ansible_check_mode
+  tags:
+    - install
+
 - name: "RedHat: Install essential packages for some Ansible modules"
   yum:
     name: "{{ essential_packages }}"
-    state: present
+    state: "{{ essential_packages_state }}"
+  when: not ansible_check_mode
   tags:
     - install
 
 - name: "RedHat: Install common packages for every Linux distribution"
   yum:
     name: "{{ common_packages }}"
-    state: present
+    state: "{{ common_packages_state }}"
+  when: not ansible_check_mode
   tags:
     - install
