--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -5,7 +5,7 @@
 # variables for Enterprise Linux (RHEL/CentOS) 7
 #
 
-# essential packages for ansible modules
+# list of essential packages for ansible modules
 __essential_packages:
   - libselinux-python
   - libsemanage-python
@@ -13,7 +13,7 @@ __essential_packages:
   - git
   - unzip
 
-# common packages for every Enterprise Linux 7 system
+# list of common packages
 __common_packages:
   - yum-utils
   - net-tools
