--- a/vars/Ubuntu-14.yml
+++ b/vars/Ubuntu-14.yml
@@ -5,7 +5,7 @@
 # variables for Ubuntu 14.04.x LTS (Trusty Tahr)
 #
 
-# essential packages for ansible modules
+# list of essential packages for ansible modules
 __essential_packages:
   - python-apt
   - python-selinux
@@ -14,7 +14,7 @@ __essential_packages:
   - git
   - unzip
 
-# common packages for every Ubuntu 14 system
+# list of common packages
 __common_packages:
   - net-tools
   - psmisc
