--- a/vars/Ubuntu-18.yml
+++ b/vars/Ubuntu-18.yml
@@ -5,7 +5,7 @@
 # variables for 18.04 LTS (Bionic Beaver) and 18.10 (Cosmic Cuttlefish)
 #
 
-# essential packages for ansible modules
+# list of essential packages for ansible modules
 __essential_packages:
   - python-apt
   - python-selinux
@@ -14,7 +14,7 @@ __essential_packages:
   - git
   - unzip
 
-# common packages for every Ubuntu 18 system
+# list of common packages
 __common_packages:
   - net-tools
   - psmisc
