Add generic solution for os specific variables
Debian specific variables are now in defaults/main. Enterprise Linux
(RHEL/CentOS) specific variables are now in one file var/RedHat.yml

To make OS-specific settings, the 'with_first_found' attribute checks
the existence of different files in the vars directory one after the
other. The first found file is used to define the OS specific settings.
If no file is found, the default settings from defaults/main.yml will be
used.

- name: Gather os specific variables
  include_vars: "{{ item }}"
  with_first_found:
    - files:
        - "{{ ..._distribution }}-{{ ..._major_version }}.yml"
        - "{{ ..._os_family }}-{{ ..._major_version }}.yml"
        - "{{ ..._distribution }}.yml"
        - "{{ ..._os_family }}.yml"
      skip: true

--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -5,6 +5,7 @@
   apt:
     name: "{{ essential_packages }}"
     state: "{{ essential_packages_state }}"
+    update_cache: "yes"
   when: not ansible_check_mode
   tags:
     - install
