--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -1,11 +1,12 @@
 ---
 # file: roles/ansible-common/tasks/setup-RedHat.yml
 
+# The EPEL Repository should be installed on all EL Systems
 - name: "RedHat: Install EPEL Repository"
   yum:
     name: epel-release
     state: present
-  when: not ansible_check_mode
+    update_cache: "yes"
   tags:
     - install
 
@@ -13,6 +14,7 @@
   yum:
     name: "{{ essential_packages }}"
     state: "{{ essential_packages_state }}"
+    update_cache: "yes"
   when: not ansible_check_mode
   tags:
     - install
