Add support for Alpine Linux 3.9
Add tasks/setup-Alpine.yml and vars/Alpine.yml to support Alpine Linux
3.9. Add a Travis Dockerfile for Alpine tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ env:
     version: stretch
   - distribution: debian
     version: jessie
+  - distribution: alpine
+    version: 3.9
 
 services:
   - docker
