Add missing docker entrypoint
Add entrypoint to Dockerfile.ansible-3.9

ENTRYPOINT ["/sbin/init"]

--- a/travis/Dockerfile.alpine-3.9
+++ b/travis/Dockerfile.alpine-3.9
@@ -10,4 +10,6 @@ RUN apk add --no-cache \
 RUN mkdir /etc/ansible \
   && echo -e "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
 
+VOLUME [ "/sys/fs/cgroup" ]
+ENTRYPOINT ["/sbin/init"]
 # vim: syntax=dockerfile
