Add Alpine Linux to supported distributions

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,11 +3,14 @@
 
 galaxy_info:
   author: Cogline.v3
-  description: Setup defaults (Ansible module dependencies, software packages, bash dotfiles, etc.) for every supported Linux distribution.
+  description: Set up dependencies for Ansible standard modules and install default software packages for each supported Linux distribution.
   license: BSD
   min_ansible_version: 2.7
   #github_branch:
   platforms:
+    - name: Alpine
+      versions:
+      - 3.9
     - name: EL
       versions:
       - 7
