--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ env:
     version: stretch
   - distribution: debian
     version: jessie
+  - distribution: debian
+    version: buster
   - distribution: alpine
     version: 3.9
 
