--- a/travis/Dockerfile.debian-buster
+++ b/travis/Dockerfile.debian-buster
@@ -10,6 +10,7 @@ RUN apt-get update \
   && apt-get install -y software-properties-common \
        apt-utils \
        sudo \
+       gnupg \
   && apt-get clean
 
 # Install Ansible.
@@ -28,4 +29,4 @@ RUN mkdir -p /etc/ansible \
   && echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
 
 VOLUME [ "/sys/fs/cgroup" ]
-ENTRYPOINT ["/sbin/init"]
+ENTRYPOINT ["/bin/systemd"]
