Test for Ubuntu 19.04 (Disco Dingo)

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
     version: bionic
   - distribution: ubuntu
     version: cosmic
+  - distribution: ubuntu
+    version: disco
   - distribution: debian
     version: stretch
   - distribution: debian
