--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ env:
     version: buster
   - distribution: alpine
     version: 3.9
+  - distribution: alpine
+    version: 3.10
 
 services:
   - docker
