Set supported platforms to Galaxy meta information
Supported Linux Distributions are:

* Alpine Linux 3.9,
* Alpine Linux 3.10,
* Debian 8 (Jessie),
* Debian 9 (Stretch),
* Debian 10 (Buster),
* Enterprise Linux 6,
* Enterprise Linux 7,
* Ubuntu 14.04 LTS (Trusty Tahr),
* Ubuntu 16.04 LTS (Xenial Xerus),
* Ubuntu 18.04 LTS (Bionic Beaver) and
* Ubuntu 19.04 (Disco Dingo).

The following Linux Distributions have reached end of life and are no
longer supported:
* Ubuntu 17.10 (Artful Aardvark)
* Ubuntu 18.10 (Cosmic Cuttlefish)

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,7 +5,7 @@ galaxy_info:
   author: Cogline.v3
   description: Set up dependencies for Ansible standard modules and install default software packages for each supported Linux distribution.
   license: BSD
-  min_ansible_version: 2.7
+  min_ansible_version: 2.8
   #github_branch:
   platforms:
     - name: Alpine
@@ -17,15 +17,15 @@ galaxy_info:
       - 6
     - name: Ubuntu
       versions:
-      - artful
       - trusty
       - xenial
-      - cosmic
       - bionic
+      - disco
     - name: Debian
       versions:
       - jessie
       - stretch
+      - buster
     
   galaxy_tags:
     - ansible
