--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,30 +3,32 @@
 
 galaxy_info:
   author: Cogline.v3
-  description: Set up dependencies for Ansible standard modules and install default software packages for each supported Linux distribution.
+  description: >-
+    Set up dependencies for Ansible standard modules and install default software
+    packages for each supported Linux distribution.
   license: BSD
   min_ansible_version: 2.8
-  #github_branch:
+  # github_branch:
   platforms:
     - name: Alpine
       versions:
-      - any
+        - any
     - name: EL
       versions:
-      - 7
-      - 6
+        - 7
+        - 6
     - name: Ubuntu
       versions:
-      - trusty
-      - xenial
-      - bionic
-      - disco
+        - trusty
+        - xenial
+        - bionic
+        - "disco dingo"
     - name: Debian
       versions:
-      - jessie
-      - stretch
-      - buster
-    
+        - jessie
+        - stretch
+        - buster
+
   galaxy_tags:
     - ansible
     - common
@@ -35,6 +37,6 @@ galaxy_info:
     - installation
 
 dependencies: []
-  # List your role dependencies here, one per line.
-  # Be sure to remove the '[]' above if you add dependencies
-  # to this list.
+# List your role dependencies here, one per line.
+# Be sure to remove the '[]' above if you add dependencies
+# to this list.
