Test for CentOs 8

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ sudo: required
 
 env:
   - distribution: centos
+    version: 6
+  - distribution: centos
     version: 7
   - distribution: centos
-    version: 6
+    version: 8
   - distribution: ubuntu
     version: xenial
   - distribution: ubuntu
