Remove argumnt 'fast' from makecach
dnf makecache: error: argument timer: invalid choice: 'fast' (choose
from 'timer')

--- a/travis/Dockerfile.centos-8
+++ b/travis/Dockerfile.centos-8
@@ -13,7 +13,7 @@ rm -f /lib/systemd/system/basic.target.wants/*;\
 rm -f /lib/systemd/system/anaconda.target.wants/*;
 
 # Install Ansible and other requirements.
-RUN yum makecache fast \
+RUN yum makecache \
   && yum -y install epel-release \
   && yum -y update \
   && yum -y install \
