--- a/travis/Dockerfile.ubuntu-eoan
+++ b/travis/Dockerfile.ubuntu-eoan
@@ -12,6 +12,7 @@ RUN apt-get update \
 RUN apt-add-repository -y ppa:ansible/ansible \
     && apt-get update && apt-get install -y \
       git \
+      python3-minimal \
       ansible \
     && rm -rf /var/lib/apt/lists/*
 
