Set symlink /usr/bin/python to /usr/bin/python3
This is a test to avoid Ansible warning:
[WARNING]: Platform linux on host localhost is using the discovered
Python interpreter at /usr/bin/python, but future installation of
another Python interpreter could change this. See
https://docs.ansible.com/ansible/2.9/reference_appendices/interpreter_discovery.html
for more information.

--- a/travis/Dockerfile.ubuntu-eoan
+++ b/travis/Dockerfile.ubuntu-eoan
@@ -14,7 +14,8 @@ RUN apt-add-repository -y ppa:ansible/ansible \
       git \
       python3-minimal \
       ansible \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && update-alternatives --install /usr/bin/python python /usr/bin/python3 10
 
 RUN echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
 
