--- a/travis/Dockerfile.ubuntu-eoan
+++ b/travis/Dockerfile.ubuntu-eoan
@@ -12,10 +12,8 @@ RUN apt-get update \
 RUN apt-add-repository -y ppa:ansible/ansible \
     && apt-get update && apt-get install -y \
       git \
-      python3-minimal \
       ansible \
-    && rm -rf /var/lib/apt/lists/* \
-    && update-alternatives --install /usr/bin/python python /usr/bin/python3 10
+    && rm -rf /var/lib/apt/lists/* 
 
 RUN echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
 
