Add feature to upgrade all packages
With the following new features user can now update the package cache and
all packages. The default value is false.

common_packages_update_cache: false
common_packages_update_all: false

--- a/tasks/setup-Alpine.yml
+++ b/tasks/setup-Alpine.yml
@@ -1,6 +1,12 @@
 ---
 # file: roles/ansible-common/tasks/setup-Debian.yml
 
+- name: "Alpine: Upgrade all packages to the latest version"
+  apk:
+    upgrade: yes
+    update_cache: "{{ common_packages_update_cache | default('false')}}"
+  when: common_packages_update_all
+
 - name: "Alpine: Install essential packages for some Ansible modules"
   apk:
     name: "{{ essential_packages }}"
