--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -1,6 +1,13 @@
 ---
 # file: roles/ansible-common/tasks/setup-RedHat.yml
 
+- name: "RedHat: Upgrade all packages to the latest version"
+  yum:
+    name: "*"
+    state: latest
+    update_cache: "{{ common_packages_update_cache | default('false')}}"
+  when: common_packages_update_all
+
 # The EPEL Repository should be installed on all EL Systems
 - name: "RedHat: Install EPEL Repository"
   yum:
