--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -14,6 +14,7 @@
     name: epel-release
     state: present
     update_cache: "yes"
+  when: not ansible_distribution == "Fedora"
   tags:
     - install
 
