Fix yamllint errors
Fix the following yamllint errors:
./defaults/main.yml
  40:31     warning  truthy value is not quoted  (truthy)

./tasks/setup-Alpine.yml
    6:14      warning  truthy value is not quoted  (truthy)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,4 +37,4 @@ common_packages_state: present
 common_packages_update_all: false
 
 # update package cache: yes | no
-common_packages_update_cache: no
+common_packages_update_cache: "no"
