--- a/meta/main.yml
+++ b/meta/main.yml
@@ -30,6 +30,10 @@ galaxy_info:
         - jessie
         - stretch
         - buster
+    - name: Fedora
+      versions:
+        - 30
+        - 31
 
   galaxy_tags:
     - ansible
