Fix Ansible Galaxy import warnings
These are the Ansible Galaxy import warnings:

---------------------------------------------------------------------
===== LOADING ROLE =====
Checking role metadata tags
Checking role platforms
Invalid platform: "Ubuntu-disco dingo", skipping.
Checking role cloud platforms
Checking role dependencies

===== LINTING ROLE =====
yamllint OK.
ansible-lint Warnings:
./galaxy/imports/tmpuffppwvd/tasks/setup-Alpine.yml:7: [E206] Variables
should have spaces before and after: {{ var_name }}
./galaxy/imports/tmpuffppwvd/tasks/setup-Debian.yml:4: [E403] Package
installs should not use latest
./galaxy/imports/tmpuffppwvd/tasks/setup-Debian.yml:8: [E206] Variables
should have spaces before and after: {{ var_name }}
./galaxy/imports/tmpuffppwvd/tasks/setup-RedHat.yml:4: [E403] Package
installs should not use latest
./galaxy/imports/tmpuffppwvd/tasks/setup-RedHat.yml:8: [E206] Variables
should have spaces before and after: {{ var_name }}

===== IMPORTING ROLE: ansible-common =====

Updating repository versions...
Import completed with 6 warnings and 0 errors
---------------------------------------------------------------------

The warning [E403] could not be fixed because to update all packages to
the latest version it is necessary to use "state=latest", for example:

- name: "Debian: Upgrade all packages to the latest version"
  apt:
    name: "*"
    state: latest
    update_cache: "{{ common_packages_update_cache |
    default('false') }}"
  when: common_packages_update_all

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -23,7 +23,7 @@ galaxy_info:
         - trusty
         - xenial
         - bionic
-        - "disco dingo"
+        - disco
         - eoan
     - name: Debian
       versions:
