--- a/.travis.yml
+++ b/.travis.yml
@@ -1,76 +1,60 @@
 ---
-sudo: required
+dist: bionic
+addons:
+  apt:
+    packages:
+      - docker-ce
+      - libssl-dev
+      - libffi-dev
+      - python3
+      - python3-pip
+      - python3-setuptools
+      - python3-software-properties
+      - python3-wheel
 
-env:
-  - distribution: alpine
-    version: "3.9"
-  - distribution: alpine
-    version: "3.10"
-  - distribution: centos
-    version: 6
-  - distribution: centos
-    version: 7
-  - distribution: centos
-    version: 8
-  - distribution: debian
-    version: jessie
-  - distribution: debian
-    version: stretch
-  - distribution: debian
-    version: buster
-  - distribution: fedora
-    version: 30
-  - distribution: fedora
-    version: 31
-  - distribution: ubuntu
-    version: trusty
-  - distribution: ubuntu
-    version: xenial
-  - distribution: ubuntu
-    version: bionic
-  - distribution: ubuntu
-    version: disco
-  - distribution: ubuntu
-    version: eoan
+language: minimal
 
 services:
   - docker
 
-before_install:
-  - >
-    echo Get docker image ${distribution}:${version}.
-    && sudo docker pull ${distribution}:${version}
-  - >
-    echo Build docker image ${distribution}:${version} for use with Ansible.
-    && sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible travis
+env:
+  global:
+    - ROLE_NAME: ansible-common
+    - AUTHOR_NAME: coglinev3
+    - MOLECULE_DISTRO: coglinev3/ansible
+  matrix:
+    - MOLECULE_DISTRO_VERSION: alpine-3.9
+    - MOLECULE_DISTRO_VERSION: alpine-3.10
+    - MOLECULE_DISTRO_VERSION: alpine-3.11
+    - MOLECULE_DISTRO_VERSION: alpine-3.12
+    - MOLECULE_DISTRO_VERSION: centos-6
+    - MOLECULE_DISTRO_VERSION: centos-7
+    - MOLECULE_DISTRO_VERSION: centos-8
+    - MOLECULE_DISTRO_VERSION: debian-8
+    - MOLECULE_DISTRO_VERSION: debian-9
+    - MOLECULE_DISTRO_VERSION: debian-10
+    - MOLECULE_DISTRO_VERSION: fedora-29
+    - MOLECULE_DISTRO_VERSION: fedora-30
+    - MOLECULE_DISTRO_VERSION: fedora-31
+    - MOLECULE_DISTRO_VERSION: fedora-32
+    - MOLECULE_DISTRO_VERSION: ubuntu-16.04
+    - MOLECULE_DISTRO_VERSION: ubuntu-18.04
+    - MOLECULE_DISTRO_VERSION: ubuntu-19.10
+    - MOLECULE_DISTRO_VERSION: ubuntu-20.04
+
+install:
+  # Install test dependencies.
+  - pip3 install molecule yamllint ansible-lint docker
+
+before_script:
+  # Use actual Ansible Galaxy role name for the project directory.
+  - cd ../
+  - mv ${ROLE_NAME} ${AUTHOR_NAME}.${ROLE_NAME}
+  - cd ${AUTHOR_NAME}.${ROLE_NAME}
 
 script:
-  - container_id=$(mktemp)
-  - >
-    echo Create docker container from image ${distribution}-${version}:ansible.
-    && sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/ansible-common:ro ${distribution}-${version}:ansible > "${container_id}"
-  - >
-    echo Get system facts for container ${distribution}-${version}:ansible.
-    && sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible all -m setup
-  - >
-    echo Testing the role’s syntax.
-    && sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook /etc/ansible/roles/ansible-common/travis/test.yml --syntax-check
-  - >
-    echo Perform a dry run.
-    && sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook /etc/ansible/roles/ansible-common/travis/test.yml --check
-  - >
-    echo Run the playbook.
-    && sudo docker exec "$(cat ${container_id})" env DEBIAN_FRONTEND=noninteractive ANSIBLE_FORCE_COLOR=1 ansible-playbook /etc/ansible/roles/ansible-common/travis/test.yml
-  - 'echo Run the role/playbook again, checking to make sure it is idempotent.'
-  - >
-    sudo docker exec "$(cat ${container_id})" env DEBIAN_FRONTEND=noninteractive ANSIBLE_FORCE_COLOR=1 ansible-playbook /etc/ansible/roles/ansible-common/travis/test.yml
-    | grep -q 'changed=0.*failed=0'
-    && (echo 'Idempotence test: pass' && exit 0)
-    || (echo 'Idempotence test: fail' && exit 1)
-  - >
-    echo Stop and remove docker container
-    && sudo docker stop "$(cat ${container_id})"
-    && sudo docker rm -f "$(cat ${container_id})"
+  # Run tests.
+  - molecule test
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
