Update supported Linux distributions
The following distribution are now supported:

* Alpine Linux 3.9,
* Alpine Linux 3.10,
* Alpine Linux 3.11,
* Alpine Linux 3.12,
* Debian 8 (Jessie),
* Debian 9 (Stretch),
* Debian 10 (Buster),
* Enterprise Linux 6,
* Enterprise Linux 7,
* Enterprise Linux 8,
* Fedora 29,
* Fedora 30,
* Fedora 31,
* Fedora 32,
* Ubuntu 14.04 LTS (Trusty Tahr),
* Ubuntu 16.04 LTS (Xenial Xerus),
* Ubuntu 18.04 LTS (Bionic Beaver),
* Ubuntu 19.10 (Eoan Ermine) and
* Ubuntu 20.04 LTS (Focal Fossa).

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -23,8 +23,8 @@ galaxy_info:
         - trusty
         - xenial
         - bionic
-        - disco
         - eoan
+        - focal
     - name: Debian
       versions:
         - jessie
@@ -32,8 +32,10 @@ galaxy_info:
         - buster
     - name: Fedora
       versions:
+        - 29
         - 30
         - 31
+        - 32
 
   galaxy_tags:
     - ansible
