Add Fedora 33 to supported distributions

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ env:
     - MOLECULE_DISTRO_VERSION: debian-9
     - MOLECULE_DISTRO_VERSION: debian-10
     - MOLECULE_DISTRO_VERSION: fedora-32
+    - MOLECULE_DISTRO_VERSION: fedora-33
     - MOLECULE_DISTRO_VERSION: ubuntu-16.04
     - MOLECULE_DISTRO_VERSION: ubuntu-18.04
     - MOLECULE_DISTRO_VERSION: ubuntu-20.04
