--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
 ---
-dist: bionic
+dist: focal
 addons:
   apt:
     packages:
-      - docker-ce
-      - libssl-dev
-      - libffi-dev
-      - python3
       - python3-pip
-      - python3-setuptools
-      - python3-software-properties
-      - python3-wheel
+      - python3-testresources
+      - libssl-dev
 
 language: minimal
 
@@ -20,6 +15,7 @@ services:
 env:
   global:
     - ROLE_NAME: ansible-common
+    - PATH: /home/travis/.local/bin:${PATH}
     - AUTHOR_NAME: coglinev3
     - MOLECULE_DISTRO: coglinev3/ansible
   matrix:
@@ -39,14 +35,19 @@ env:
     - MOLECULE_DISTRO_VERSION: ubuntu-20.04
 
 install:
-  # Install test dependencies.
-  - pip3 install molecule yamllint ansible-lint docker
+  # Upgrade setuptools
+  - python3 -m pip install --upgrade --user setuptools
+  # Install Ansible Molecule with docker driver and lint tools
+  - python3 -m pip install --upgrade --user "molecule[ansible,docker,lint]"
 
 before_script:
   # Use actual Ansible Galaxy role name for the project directory.
   - cd ../
-  - mv ${ROLE_NAME} ${AUTHOR_NAME}.${ROLE_NAME}
-  - cd ${AUTHOR_NAME}.${ROLE_NAME}
+  - mv $(basename $TRAVIS_REPO_SLUG) $(dirname $TRAVIS_REPO_SLUG).${ROLE_NAME}
+  - cd $(dirname $TRAVIS_REPO_SLUG).${ROLE_NAME}
+  # Show Ansible and Molecule versions
+  - ansible --version
+  - molecule --version
 
 script:
   # Run tests.
