--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -25,3 +25,13 @@
   when: not ansible_check_mode
   tags:
     - install
+    
+- name: "Debian: Install extra packages for every Linux distribution"
+  apt:
+    name: "{{ extra_packages }}"
+    state: "{{ extra_packages_state }}"
+  when: 
+    - not ansible_check_mode
+    - extra_packages is defined
+  tags:
+    - install 
